Implement participant advanced search and search criteria chips
